# Rust-Practice-Project

01.File_Compress/: Cargo.toml
01.File_Compress/src/: main.rs
04.Json_Reader/: Cargo.toml
07.Async-Await/src/: main.rs
1.File_Compress/: CompressTest
10.Img-Download/: Cargo.toml
11.Extract-Links/: Cargo.toml
11.Extract-Links/src/: main.rs
12.Connect-Sqlite/: Cargo.toml  sqlite.db
12.Connect-Sqlite/src/: main.rs
13.Acticx-Rhai-ApiTest/: Cargo.toml
13.Acticx-Rhai-ApiTest/src/: add.rhai  main.rs  multiply.rhai
14.Git-Automate/: Cargo.toml  readme.md
14.Git-Automate/src/: main.rs
15.Password-Vault/: Cargo.toml
15.Password-Vault/src/: main.rs  pentry.rs
17.Sqlite-Password-Vault/: Cargo.toml  MyVault.db
17.Sqlite-Password-Vault/src/: db.rs  main.rs
18.Authen-Jwt-Warp/: Cargo.toml
18.Authen-Jwt-Warp/src/: auth.rs  error.rs  main.rs
2.File_Decompress/src/: main.rs
4.Json_Reader/src/: main.rs
6.Get_Request/: Cargo.toml
8.Basic-Authorization/src/: main.rs
API-Call/: Cargo.toml
API-Call/src/: main.rs
Async-Await/: Cargo.toml
Basic-Authorization/: Cargo.toml
CSV_Reader/: Cargo.toml
CSV_Reader/src/: main.rs
File_Compress/: text.txt
File_Compress/src/: main.rs
File_Decompress/: Cargo.toml
Get_Request/src/: main.rs
Img-Download/src/: main.rs
Json_Reader/src/: main.rs
Json_Writer/: Cargo.toml
Json_Writer/src/: main.rs
