[package]
name = "Authen-Jwt-Warp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialize & Deserialize
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Jwt
jsonwebtoken = "9.3.0"

# warp
warp = "0.3.7"

# async
tokio = {version="1.38.1", features = ["full"]}

# Error
thiserror = "1.0.63"

# Time
chrono = "0.4.38"



